<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_ToAnyType" Id="{42ad9bab-d5a0-49d5-a1f7-133ba38a0dc8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_ToAnyType : ST_AnyType
VAR_INPUT
	anyArg	: ANY;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_ToAnyType.pValue := anyArg.pValue;
F_ToAnyType.nSize := anyArg.diSize;
F_ToAnyType.TypeClass := anyArg.TypeClass;]]></ST>
    </Implementation>
    <LineIds Name="F_ToAnyType">
      <LineId Id="10" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>